--- a/package.json
+++ b/package.json
@@ -6,15 +6,25 @@
   "type": "module",
   "scripts": {
     "start": "node index.js",
-    "dev": "node --watch index.js"
+    "dev": "node --watch index.js",
+    "test:bot": "NODE_ENV=test node -r dotenv/config index.js dotenv_config_path=.env.test"
   },
-  "keywords": ["discord", "bot", "tcg", "pokemon", "onepiece", "yugioh", "price"],
+  "keywords": [
+    "discord",
+    "bot",
+    "tcg",
+    "pokemon",
+    "onepiece",
+    "yugioh",
+    "price"
+  ],
   "author": "",
   "license": "MIT",
   "dependencies": {
     "discord.js": "^14.14.1",
+    "dotenv": "^16.4.5",
     "groq-sdk": "^0.8.0",
     "node-fetch": "^3.3.2",
-    "dotenv": "^16.4.5"
+    "pokemontcgsdk": "^2.0.0"
   }
 }
