refactor: 移除 Pokemon TCG SDK 依赖
- 移除 pokemontcgsdk 依赖（API 一直 504 超时不可用）
- 简化 queryPokemonPrice 函数，直接返回 found: false
- Pokemon 卡牌使用 AI 分析 + 搜索链接方式

--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     "discord.js": "^14.14.1",
     "dotenv": "^16.4.5",
     "groq-sdk": "^0.8.0",
-    "node-fetch": "^3.3.2",
-    "pokemontcgsdk": "^2.0.0"
+    "node-fetch": "^3.3.2"
   }
 }
